--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,13 @@
-== README
+== Wallet Manager
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+* Ruby version 2.0.0 or higher
 
-Things you may want to cover:
+* Configuration:
 
-* Ruby version
+* Database creation: `rake db:create`
 
-* System dependencies
+* Database migration: `rake db:migrate`
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
+* How to run the test suite Not written test yet
 
 * Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
